# CX_DB8

./: .gitignore  README.md  card_clustering.py  cx_db8.py  cx_db8_flair.ini  cx_db8_flair.py  cx_requirments.txt  demo.tape  demo_help.tape  pyproject.toml  requirements.txt
legacy/: CX_DB8_PoS.py  CX_DB8_Seq2Seq.py  cx_db8.py  cx_db8_flair.py  requirements.txt  text_graph.py
src/cx_db8/: __init__.py  __main__.py  cli.py  display.py  docx_export.py  embeddings.py  graph.py  summarizer.py
tests/: test_summarizer.py
